# testPlanner

./: app.py  auth.py  build.sh  models.py  project_prompt.md  pyproject.toml  requirements.txt  wrangler.jsonc  wrangler.toml
attached_assets/: Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1740125124220.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-content-1740125131254.txt  Pasted--root-primary-color-1a73e8-primary-light-e8f0fe-transition-speed-0-3s--1740125101802.txt  Pasted-const-SUBTEMPLATE-DESCRIPTIONS-Basic-Frameworks-5-E-s-Lesson-Plan-Engage-Explore-1740125111772.txt  Pasted-import-os-import-json-from-flask-import-Flask-render-template-request-jsonify-from-openai-import--1740125210206.txt
functions/: app.py  auth.py
functions/templates/: index.html  login.html  pricing.html  signup.html
repl_nix_workspace.egg-info/: PKG-INFO  requires.txt
routes/: auth.py
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  landing.html  pricing.html
templates/auth/: login.html  reset_password.html  signup.html
