
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "AI Lesson Planner - Smart Lesson Planning Assistant"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.63.2",
    "psycopg2-binary>=2.9.10",
    "supabase>=2.13.0",
    "flask-wtf>=1.2.2",
    "stripe>=11.6.0",
    "slack-sdk>=3.34.0",
    "twilio>=9.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
include-package-data = true

[tool.setuptools.package-data]
"*" = ["templates/*", "static/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["attached_assets/*"]
